--- a/style.css
+++ b/style.css
@@ -1,8 +1,39 @@
+*{
+  padding: 0;
+  margin: 0;
+}
+
+body{
+  background-color: gray;
+}
+
 #container{
+  margin: auto;
   text-align: center;
+  width: 100vw;
+  height: 100vh;
 }
 
 h1{
   font-weight: bold;
-  font-size: 100px;
+  font-size: 300px;
+}
+
+
+
+/*BALLS*/
+
+.ball{
+  border-radius: 50%;
+  position: absolute;
+  z-index: -1;
+}
+
+.ball:nth-of-type(1){
+  width: 200px;
+  height: 200px;
+  background-color: #fff;
+  top: 50px;
+  left: 50%;
+  margin-left: -230px;
 }
