--- a/style.css
+++ b/style.css
@@ -37,3 +37,10 @@ h1{
   top: 50px;
   margin-left: -230px;
 }
+
+.ball:nth-of-type(2){
+  width: 150px;
+  height: 150px;
+  top: 150px;
+  margin-left: -100px;
+}
