--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body{
   text-align: center;
   width: 100vw;
   height: 100vh;
+  color: gray;
 }
 
 h1{
@@ -43,4 +44,18 @@ h1{
   height: 150px;
   top: 150px;
   margin-left: -100px;
+}
+
+.ball:nth-of-type(3){
+  width: 250px;
+  height: 250px;
+  top: 50px;
+  margin-left: 0px;
+}
+
+.ball:nth-of-type(4){
+  width: 180px;
+  height: 180px;
+  top: 270px;
+  margin-left: -90px;
 }
