--- a/style.css
+++ b/style.css
@@ -20,6 +20,23 @@ h1{
   font-size: 300px;
 }
 
+a{
+  display: block;
+  text-decoration: none;
+  width: 100px;
+  height: 50px;
+  margin: auto;
+  background-color: gray;
+  line-height: 50px;
+  color: white;
+  border-radius: 5px;
+  box-shadow: 0 5px 0 darkgray;
+}
+
+a:hover{
+  background-color: darkgray;
+}
+
 
 
 /*BALLS*/
