--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 *{
   padding: 0;
   margin: 0;
+  font-weight: bold;
+  font-family: 'Staatliches', cursive;
 }
 
 body{
@@ -17,7 +19,7 @@ body{
 
 h1{
   font-weight: bold;
-  font-size: 300px;
+  font-size: 280px;
 }
 
 a{
@@ -81,7 +83,7 @@ a:hover{
 .ball:nth-of-type(4){
   width: 180px;
   height: 180px;
-  top: 270px;
+  top: 290px;
   margin-left: -90px;
   animation-delay: 2.4s;
   animation-duration: 2.5s;
